--- a/project/style.css
+++ b/project/style.css
@@ -12,6 +12,7 @@
 html, body {
     font-family: 'Rubik', sans-serif;
     font-style: normal;
+    min-width: 375px;
 }
 
 a {
@@ -88,6 +89,10 @@ color: #fff;
     gap: 24px;
 }
 
+.menu-icon {
+    display: none;
+}
+
 /* Стили для первой секции */
 
 .main-wrapper {
@@ -99,6 +104,8 @@ color: #fff;
 
 .main-img {
     align-self: flex-end;
+    max-width: 656px;
+    width: 100%;
 }
 
 .main-title {
@@ -148,6 +155,7 @@ border-radius: 4px;
 
 .rates-section .text {
     margin-bottom: 40px;
+    text-align: center;
 }
 
 .table {
@@ -226,7 +234,7 @@ padding: 8px 0;
 }
 
 .list-item {
-    list-style-image: url("/assets/images/Check.png");
+    list-style-image: url("assets/images/Check.png");
     margin-left: 30px;
     margin-bottom: 15px;
     color: #363940;
@@ -327,6 +335,7 @@ small {
 @media screen and (max-width: 1400px) {
     .main-wrapper{
         flex-direction: column;
+        min-height: auto;
     }
     .main-info{
         align-self: flex-start;
@@ -352,5 +361,33 @@ small {
     }
     form{
         align-self: center;
+    }
+}
+
+/*============== Адаптив под мобилки ==============*/
+
+@media screen and (max-width: 576px) {
+    .menu {
+        display: none;
+    }
+    .menu-icon {
+        display:block;
+    }
+    .main-info{
+        margin: 60px 0;
+    }
+    .main-title{
+        font-size: 52px;
+        line-height: 60px;
+    }
+    .account-wrapper{
+        gap: 60px;
+    }
+    label{
+        white-space: nowrap;
+    }
+    fieldset {
+        flex-wrap: wrap;
+        row-gap: 20px;
     }
 }
